--- a/.github/workflows/test-setup-zeitgeist.yml
+++ b/.github/workflows/test-setup-zeitgeist.yml
@@ -15,6 +15,7 @@ jobs:
       zeitgeist: ${{ steps.filter.outputs.zeitgeist }}
 
     steps:
+      - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3.5.0
       - uses: dorny/paths-filter@4512585405083f25c027a35db413c2b3b9006d50 # v2.11.1
         id: filter
         with:
