--- a/.github/workflows/test-setup-zeitgeist.yml
+++ b/.github/workflows/test-setup-zeitgeist.yml
@@ -57,7 +57,9 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-        go_version: ['1.19']
+        go_version:
+          - '1.19'
+          - '1.20'
     name: Try to install zeitgeist with go ${{ matrix.go_version }}
     steps:
       - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3.5.0
