--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,10 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 10
+
+  # setup-bom
+  - package-ecosystem: "github-actions"
+    directory: "/setup-bom"
+    schedule:
+      interval: "daily"
+    open-pull-requests-limit: 10
