--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,3 +20,10 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 10
+
+  # setup-tejolote
+  - package-ecosystem: "github-actions"
+    directory: "/setup-tejolote"
+    schedule:
+      interval: "daily"
+    open-pull-requests-limit: 10
