Don't print assets flag if no assets
Signed-off-by: Adolfo García Veytia (Puerco) <adolfo.garcia@uservers.net>

--- a/publish-release/action.yaml
+++ b/publish-release/action.yaml
@@ -79,4 +79,4 @@ runs:
           --tag="${GITHUB_REF#refs/tags/}" --nomock ${draft} \
           --name="${{ inputs.name }}" \
           --template="${{ inputs.template }}" \
-          $(printf " --asset=\"%s\"" "${assets[@]}")
+          $(if [ "${#assets[@]}" -ne 0 ]; then printf " --asset=\"%s\"" "${assets[@]}"; fi )
