--- a/publish-release/action.yaml
+++ b/publish-release/action.yaml
@@ -20,24 +20,36 @@ branding:
   color: 'blue'
 
 inputs:
+  publish-release-version:
+    description: 'publish-release version to be installed'
+    required: false
+    default: '0.16.8'
+  install-only:
+    description: "Only install publish-release binary"
+    required: false
+    default: 'false'
+  install-dir:
+    description: 'Where to install the publish-release binary'
+    required: false
+    default: '$HOME/.publish-release'
+  use-sudo:
+    description: 'set to true if install-dir location requires sudo privs'
+    required: false
+    default: 'false'
   assets:
     description: "Assets to upload to the release page (see readme)."
-    type: string
     required: false
   draft:
     description: "Mark the release as draft"
-    type: boolean
     required: false
-    default: false
+    default: 'false'
   sbom:
     description: "Generate an SBOM from the code"
-    type: boolean
     required: false
-    default: true
+    default: 'true'
   template:
     description: "Release template file"
     required: false
-
   name:
     description: "Name for the release"
     required: false
@@ -52,16 +64,133 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Check out code onto GOPATH
-      uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.0.2
-
-    # Go is required to compute dependencies
-    - uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v3.3.0
+    - uses: sigstore/cosign-installer@e1523de7571e31dbe865fd2e80c5c7c23ae71eb4 # v3.4.0
       with:
-        go-version: '1.21'
+        install-dir: ${{ inputs.install-dir }}
+        use-sudo: ${{ inputs.use-sudo }}
+
+    # if requested to install from go install
+    - uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v3.3.0
+      if: ${{ inputs.publish-release-version == 'main' }}
+      with:
+        go-version: '1.22'
         check-latest: true
+        cache: false
 
     - shell: bash
+      run: |
+        #!/bin/bash
+        # publish-release install script
+        shopt -s expand_aliases
+        if [ -z "$NO_COLOR" ]; then
+          alias log_info="echo -e \"\033[1;32mINFO\033[0m:\""
+          alias log_error="echo -e \"\033[1;31mERROR\033[0m:\""
+        else
+          alias log_info="echo \"INFO:\""
+          alias log_error="echo \"ERROR:\""
+        fi
+        set -e
+
+        mkdir -p ${{ inputs.install-dir }}
+
+        if [[ ${{ inputs.publish-release-version }} == "main" ]]; then
+          log_info "installing publish-release via 'go install' from its main version"
+          GOBIN=$(go env GOPATH)/bin
+          go install k8s.io/release/cmd/publish-release@master
+          ln -s $GOBIN/publish-release ${{ inputs.install-dir}}/publish-release
+          exit 0
+        fi
+
+        trap "popd >/dev/null" EXIT
+
+        pushd ${{ inputs.install-dir }} > /dev/null
+        publish_release_executable_name='publish-release'
+        case ${{ runner.os }} in
+          Linux)
+            case ${{ runner.arch }} in
+              X64)
+                desired_publish_release_filename='publish-release-amd64-linux'
+                ;;
+
+              ARM64)
+                desired_publish_release_filename='publish-release-arm64-linux'
+                ;;
+
+              *)
+                log_error "unsupported architecture $arch"
+                exit 1
+                ;;
+            esac
+            ;;
+
+          macOS)
+            case ${{ runner.arch }} in
+              X64)
+                desired_publish_release_filename='publish-release-amd64-darwin'
+                ;;
+
+              ARM64)
+                desired_publish_release_filename='publish-release-arm64-darwin'
+                ;;
+
+              *)
+                log_error "unsupported architecture $arch"
+                exit 1
+                ;;
+            esac
+            ;;
+
+          *)
+            log_error "unsupported architecture $arch"
+            exit 1
+            ;;
+        esac
+
+        SUDO=
+        if "${{ inputs.use-sudo }}" == "true" && command -v sudo >/dev/null; then
+          SUDO=sudo
+        fi
+
+        semver='^([0-9]+\.){0,2}(\*|[0-9]+)$'
+        if [[ ${{ inputs.publish-release-version }} =~ $semver ]]; then
+          log_info "Custom publish-release version '${{ inputs.publish-release-version }}' requested"
+        else
+          log_error "Unable to validate requested publish-release version: '${{ inputs.publish-release-version }}'"
+          exit 1
+        fi
+
+        # Download custom publish-release
+        log_info "Downloading platform-specific version '${{ inputs.publish-release-version }}' of publish-release...\n      https://github.com/kubernetes/release/releases/download/v${{ inputs.publish-release-version }}/${desired_publish_release_filename}"
+        $SUDO curl -sL https://github.com/kubernetes/release/releases/download/v${{ inputs.publish-release-version }}/${desired_publish_release_filename} -o ${publish_release_executable_name}
+
+        PUBLISH_RELEASE_CERT=https://github.com/kubernetes/release/releases/download/v${{ inputs.publish-release-version }}/${desired_publish_release_filename}.pem
+        PUBLISH_RELEASE_SIG=https://github.com/kubernetes/release/releases/download/v${{ inputs.publish-release-version }}/${desired_publish_release_filename}.sig
+
+        log_info "Using cosign to verify signature of desired publish-release version"
+        cosign verify-blob --certificate $PUBLISH_RELEASE_CERT --signature $PUBLISH_RELEASE_SIG \
+          --certificate-identity "https://github.com/kubernetes/release/.github/workflows/release.yml@refs/tags/v${{ inputs.publish-release-version }}" \
+          --certificate-oidc-issuer "https://token.actions.githubusercontent.com" ${publish_release_executable_name}
+        retVal=$?
+        if [[ $retVal -eq 0 ]]; then
+          $SUDO chmod +x ${publish_release_executable_name}
+          log_info "Installation complete!"
+        else
+          log_error "Unable to validate publish-release version: '${{ inputs.publish-release-version }}'"
+          exit 1
+        fi
+
+    - if: ${{ runner.os == 'Linux' || runner.os == 'macOS' }}
+      run: echo "${{ inputs.install-dir }}" >> $GITHUB_PATH
+      shell: bash
+
+    - if: ${{ inputs.install-only == 'true' }}
+      run: |
+        echo "Install only requested, installed!"
+        exit 0
+      shell: bash
+
+    - shell: bash
+      if: ${{ inputs.install-only == 'false' }}
       run: |
         #!/usr/bin/env bash
 
