--- a/.github/workflows/test-setup-zeitgeist.yml
+++ b/.github/workflows/test-setup-zeitgeist.yml
@@ -51,7 +51,7 @@ jobs:
       - uses: actions/checkout@9bb56186c3b09b4f86b1c65136769dd318469633 # v4.1.2
       - name: Install zeitgeist
         uses: ./setup-zeitgeist
-      - name: Check install!
+      - name: Check version
         run: zeitgeist version
       - name: Check root directory
         run: |
@@ -72,8 +72,8 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
         go_version:
-          - '1.20'
           - '1.21'
+          - '1.22'
     name: Try to install zeitgeist with go ${{ matrix.go_version }}
     steps:
       - uses: actions/checkout@9bb56186c3b09b4f86b1c65136769dd318469633 # v4.1.2
@@ -85,7 +85,8 @@ jobs:
         uses: ./setup-zeitgeist
         with:
           zeitgeist-release: 'main'
-      - name: Check install!
+          remote-version: 'false'
+      - name: Check version!
         run: zeitgeist version
 
   test_zeitgeist_action_custom_dir_root:
@@ -104,7 +105,7 @@ jobs:
         with:
           install-dir: /usr/bin
           use-sudo: true
-      - name: Check install!
+      - name: Check version
         run: zeitgeist version
       - name: Check install dir!
         run: |
@@ -130,7 +131,7 @@ jobs:
         uses: ./setup-zeitgeist
         with:
           install-dir: "$HOME/.zeitgeisttest"
-      - name: Check install!
+      - name: Check version
         run: zeitgeist version
       - name: Check install dir!
         run: |
@@ -139,6 +140,33 @@ jobs:
       - name: Check root directory
         run: |
           [[ -z $(git diff --stat) ]]
+        shell: bash
+
+  test_zeitgeist_local:
+    needs: changes
+    if: ${{ needs.changes.outputs.zeitgeist == 'true' }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+    permissions: {}
+    name: Install zeitgeist local
+    steps:
+      - uses: actions/checkout@9bb56186c3b09b4f86b1c65136769dd318469633 # v4.1.2
+      - name: Install zeitgeist
+        uses: ./setup-zeitgeist
+        with:
+          remote-version: 'false'
+      - name: Check version
+        run: zeitgeist version
+      - name: Check root directory
+        run: |
+          if [[ $(git diff --stat) != '' ]]; then
+            echo 'should be clean'
+            exit 1
+          else
+            exit 0
+          fi
         shell: bash
 
   test_zeitgeist_action_wrong:
