--- a/publish-release/action.yaml
+++ b/publish-release/action.yaml
@@ -23,7 +23,7 @@ inputs:
   publish-release-version:
     description: 'publish-release version to be installed'
     required: false
-    default: '0.16.8'
+    default: '0.18.0'
   install-only:
     description: "Only install publish-release binary"
     required: false
@@ -47,6 +47,10 @@ inputs:
     description: "Generate an SBOM from the code"
     required: false
     default: 'true'
+  sbom_format:
+    description: "format to use for the SBOM [json|tag-value]"
+    required: false
+    default: 'json'
   template:
     description: "Release template file"
     required: false
@@ -73,13 +77,13 @@ runs:
     - uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 # v5.3.0
       if: ${{ inputs.publish-release-version == 'main' }}
       with:
-        go-version: '1.23'
+        go-version: '1.24'
         check-latest: true
         cache: false
 
     - shell: bash
       run: |
-        #!/bin/bash
+        #!/usr/bin/env bash
         # publish-release install script
         shopt -s expand_aliases
         if [ -z "$NO_COLOR" ]; then
@@ -194,8 +198,14 @@ runs:
       run: |
         #!/usr/bin/env bash
 
-        if [ "${{ inputs.draft }}" = "true" ]; then
+        draft=""
+        if [[ "${{ inputs.draft }}" == true || "${{ inputs.draft }}" == "true" ]]; then
           draft="--draft"
+        fi
+
+        sbom="--sbom=false"
+        if [[ "${{ inputs.sbom }}" == true || "${{ inputs.sbom }}" == "true" ]]; then
+          sbom="--sbom=true --sbom-format="${{ inputs.sbom_format }}""
         fi
 
         IFS='|' read -r -a assets <<< "${{ inputs.assets }}";
@@ -204,5 +214,5 @@ runs:
           --repo="${{ github.repository }}" \
           --tag="${GITHUB_REF#refs/tags/}" --nomock ${draft} \
           --name="${{ inputs.name }}" \
-          --template="${{ inputs.template }}" \
+          --template="${{ inputs.template }}" ${sbom} \
           $(if [ "${#assets[@]}" -ne 0 ]; then printf " --asset=\"%s\"" "${assets[@]}"; fi )
