--- a/.github/workflows/test-setup-release-notes.yaml
+++ b/.github/workflows/test-setup-release-notes.yaml
@@ -16,20 +16,28 @@ name: test-release-notes-action
 
 on:
   pull_request:
+    branches:
+      - 'main'
   push:
     branches:
       - 'main'
 
+permissions: {}
+
 jobs:
   changes:
     runs-on: ubuntu-latest
+
     permissions:
       pull-requests: read
+      contents: read
+
     outputs:
       relnotes: ${{ steps.filter.outputs.relnotes }}
 
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+
       - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
         id: filter
         with:
@@ -39,20 +47,33 @@ jobs:
               - '.github/workflows/test-setup-release-notes.yaml'
 
   test_relnotes_action:
-    needs: changes
     if: ${{ needs.changes.outputs.relnotes == 'true' }}
-    runs-on: ${{ matrix.os }}
+    needs:
+      - changes
+
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
-    permissions: {}
+        os:
+          - macos-latest
+          - ubuntu-latest
+
+    runs-on: ${{ matrix.os }}
+
+    permissions:
+      contents: read
+
     name: Install release-notes and test presence in path
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
+
       - name: Install release notes
         uses: ./setup-release-notes
+
       - name: Check install!
         run: release-notes --help
+
       - name: Check root directory
         run: |
           if [[ $(git diff --stat) != '' ]]; then
@@ -64,25 +85,35 @@ jobs:
         shell: bash
 
   test_relnotes_with_go_install:
-    permissions: {}
-    needs: changes
     if: ${{ needs.changes.outputs.relnotes == 'true' }}
-    runs-on: ${{ matrix.os }}
+    needs:
+      - changes
+
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
-        go_version:
-          - '1.25'
-    name: Try to install release-notes with go ${{ matrix.go_version }}
+        os:
+          - macos-latest
+          - ubuntu-latest
+
+    runs-on: ${{ matrix.os }}
+
+    permissions:
+      contents: read
+
+    name: Try to install release-notes with go 1.25
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
+
       - uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6.0.0
         with:
-          go-version: ${{ matrix.go_version }}
+          go-version: '1.25'
           check-latest: true
+          cache: false
+
       - name: Install release-notes
         uses: ./setup-release-notes
+
       - name: Check install!
         run: release-notes --help
-
-
