--- a/.github/workflows/test-setup-zeitgeist.yml
+++ b/.github/workflows/test-setup-zeitgeist.yml
@@ -16,20 +16,28 @@ name: test-zeitgeist-action
 
 on:
   pull_request:
+    branches:
+      - 'main'
   push:
     branches:
       - 'main'
 
+permissions: {}
+
 jobs:
   changes:
     runs-on: ubuntu-latest
+
     permissions:
       pull-requests: read
+      contents: read
+
     outputs:
       zeitgeist: ${{ steps.filter.outputs.zeitgeist }}
 
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+
       - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
         id: filter
         with:
@@ -39,20 +47,34 @@ jobs:
               - '.github/workflows/test-setup-zeitgeist.yml'
 
   test_zeitgeist_action:
-    needs: changes
     if: ${{ needs.changes.outputs.zeitgeist == 'true' }}
-    runs-on: ${{ matrix.os }}
+    needs:
+      - changes
+
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-    permissions: {}
+        os:
+          - macos-latest
+          - ubuntu-latest
+          - windows-latest
+
+    runs-on: ${{ matrix.os }}
+
+    permissions:
+      contents: read
+
     name: Install zeitgeist and test presence in path
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
+
       - name: Install zeitgeist
         uses: ./setup-zeitgeist
+
       - name: Check version
         run: zeitgeist version
+
       - name: Check root directory
         run: |
           if [[ $(git diff --stat) != '' ]]; then
@@ -64,100 +86,145 @@ jobs:
         shell: bash
 
   test_zeitgeist_with_go_install:
-    permissions: {}
-    needs: changes
     if: ${{ needs.changes.outputs.zeitgeist == 'true' }}
-    runs-on: ${{ matrix.os }}
+    needs:
+      - changes
+
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-        go_version:
-          - '1.25'
-    name: Try to install zeitgeist with go ${{ matrix.go_version }}
+        os:
+          - macos-latest
+          - ubuntu-latest
+          - windows-latest
+
+    runs-on: ${{ matrix.os }}
+
+    permissions:
+      contents: read
+
+    name: Try to install zeitgeist with go 1.25
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6.0.0
         with:
-          go-version: ${{ matrix.go_version }}
+          go-version: '1.25'
           check-latest: true
+          cache: false
+
       - name: Install zeitgeist
         uses: ./setup-zeitgeist
         with:
           zeitgeist-release: 'main'
           remote-version: 'false'
+
       - name: Check version!
         run: zeitgeist version
 
   test_zeitgeist_action_custom_dir_root:
-    runs-on: ${{ matrix.os }}
-    needs: changes
     if: ${{ needs.changes.outputs.zeitgeist == 'true' }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-    permissions: {}
+    needs:
+      - changes
+    runs-on: 'ubuntu-latest'
+
+    permissions:
+      contents: read
+
     name: Install Custom zeitgeist and test presence in path with custom root dir
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
+
       - name: Install zeitgeist
         uses: ./setup-zeitgeist
         with:
           install-dir: /usr/bin
           use-sudo: true
+
       - name: Check version
         run: zeitgeist version
       - name: Check install dir!
         run: |
           [[ $(dirname "$(which zeitgeist)") == /usr/bin ]]
         shell: bash
+
       - name: Check root directory
         run: |
           [[ -z $(git diff --stat) ]]
         shell: bash
 
   test_zeitgeist_action_custom_dir:
-    runs-on: ${{ matrix.os }}
-    needs: changes
     if: ${{ needs.changes.outputs.zeitgeist == 'true' }}
+    needs:
+      - changes
+
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-    permissions: {}
+        os:
+          - macos-latest
+          - ubuntu-latest
+          - windows-latest
+
+    runs-on: ${{ matrix.os }}
+
+    permissions:
+      contents: read
+
     name: Install Custom path zeitgeist and test presence in path
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
+
       - name: Install zeitgeist
         uses: ./setup-zeitgeist
         with:
           install-dir: "$HOME/.zeitgeisttest"
+
       - name: Check version
         run: zeitgeist version
+
       - name: Check install dir!
         run: |
           [[ $(dirname "$(which zeitgeist)") == "$HOME/.zeitgeisttest" ]]
         shell: bash
+
       - name: Check root directory
         run: |
           [[ -z $(git diff --stat) ]]
         shell: bash
 
   test_zeitgeist_local:
-    needs: changes
     if: ${{ needs.changes.outputs.zeitgeist == 'true' }}
-    runs-on: ${{ matrix.os }}
+    needs:
+      - changes
+
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-    permissions: {}
+        os:
+          - macos-latest
+          - ubuntu-latest
+          - windows-latest
+
+    runs-on: ${{ matrix.os }}
+
+    permissions:
+      contents: read
+
     name: Install zeitgeist local
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
+
       - name: Install zeitgeist
         uses: ./setup-zeitgeist
         with:
           remote-version: 'false'
+
       - name: Check version
         run: zeitgeist version
+
       - name: Check root directory
         run: |
           if [[ $(git diff --stat) != '' ]]; then
@@ -169,16 +236,28 @@ jobs:
         shell: bash
 
   test_zeitgeist_action_wrong:
-    runs-on: ${{ matrix.os }}
-    needs: changes
     if: ${{ needs.changes.outputs.zeitgeist == 'true' }}
+    needs:
+      - changes
+
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-    permissions: {}
+        os:
+          - macos-latest
+          - ubuntu-latest
+          - windows-latest
+
+    runs-on: ${{ matrix.os }}
+
+    permissions:
+      contents: read
+
     name: Try to install a wrong zeitgeist
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
+
       - name: Install zeitgeist
         uses: ./setup-zeitgeist
         with:
